developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Score__c/OJSERLIB__VEDA_Score__c.object-meta.xml
<CustomObject>
    <label>VEDA Score</label>
    <nameField>
        <displayFormat>S-{0000}</displayFormat>
        <label>VEDA Score Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VEDA Scores</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>