developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Score__c/fields/OJSERLIB__Risk_Odds__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Risk_Odds__c</fullName>
    <label>Risk Odds</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>