developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Score__c/fields/OJSERLIB__Score_Masterscale__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Score_Masterscale__c</fullName>
    <label>Score Masterscale</label>
    <length>7</length>
    <type>Text</type>
</CustomField>