developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Score__c/fields/OJSERLIB__Score_Seq_Number__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__Score_Seq_Number__c</fullName>
    <label>Score Seq Number</label>
    <length>3</length>
    <type>Text</type>
</CustomField>