developerProject/force-app/main/default/objects/OJSERLIB__VEDA_Score__c/fields/OJSERLIB__VEDACommercial_Credit_Assess_Individual__c.field-meta.xml
<CustomField>
    <fullName>OJSERLIB__VEDACommercial_Credit_Assess_Individual__c</fullName>
    <label>VEDACommercial Credit Assess Individual</label>
    <referenceTo>OJSERLIB__VEDACommercial_Credit_Assess_Individual__c</referenceTo>
    <relationshipLabel>VEDA Scores</relationshipLabel>
    <relationshipName>VEDA_Scores</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>